--- a/theme/package.json
+++ b/theme/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-theme-jam-example",
+  "name": "gatsby-theme-anchor",
   "author": "Jason Lengstorf <jason@gatsbyjs.com>",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jlengstorf/gatsby-theme-jam-example.git"
+    "url": "https://github.com/emasuriano/gatsby-theme-anchor.git"
   },
   "version": "1.0.1",
   "main": "index.js",
