Adding Home and basic layout of components

--- a/theme/package.json
+++ b/theme/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@mdx-js/react": "^1.0.21",
+    "@theme-ui/presets": "^0.2.10",
     "gatsby-plugin-theme-ui": "^0.2.2",
     "gatsby-source-anchor": "^0.5.1",
     "gatsby-source-rss-feed": "^1.1.1",
