--- a/theme/package.json
+++ b/theme/package.json
@@ -5,6 +5,9 @@
     "type": "git",
     "url": "https://github.com/emasuriano/gatsby-theme-anchor.git"
   },
+  "scripts": {
+    "type-check": "tsc --noEmit --jsx react --allowSyntheticDefaultImports src/**/*"
+  },
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
@@ -23,9 +26,11 @@
     "@mdx-js/react": "^1.0.21",
     "@theme-ui/presets": "^0.2.10",
     "gatsby-plugin-theme-ui": "^0.2.2",
+    "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-anchor": "^0.5.1",
     "gatsby-source-rss-feed": "^1.1.1",
-    "theme-ui": "^0.2.2"
+    "theme-ui": "^0.2.2",
+    "typescript": "^3.5.3"
   },
   "keywords": [
     "gatsby",
