--- a/theme/package.json
+++ b/theme/package.json
@@ -9,6 +9,11 @@
     "type-check": "tsc --noEmit --jsx react --allowSyntheticDefaultImports src/**/*",
     "format": "prettier --write src/**/*.{ts,tsx}"
   },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn type-check"
+    }
+  },
   "version": "0.0.1",
   "main": "index.js",
   "license": "MIT",
@@ -30,6 +35,7 @@
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-anchor": "^0.5.1",
     "gatsby-source-rss-feed": "^1.1.1",
+    "husky": "^3.0.0",
     "react-headroom": "^2.2.8",
     "theme-ui": "^0.2.2",
     "typescript": "^3.5.3"
