Setting up husky

--- a/package.json
+++ b/package.json
@@ -3,5 +3,10 @@
   "workspaces": [
     "theme",
     "demo"
-  ]
+  ],
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn type-check"
+    }
+  }
 }
