Adding Hero component!

--- a/theme/package.json
+++ b/theme/package.json
@@ -26,12 +26,18 @@
     "@emotion/core": "^10.0.14",
     "@mdx-js/react": "^1.0.21",
     "@theme-ui/presets": "^0.2.10",
+    "audiocard": "^1.0.0",
     "gatsby-plugin-theme-ui": "^0.2.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-anchor": "^0.5.1",
     "gatsby-source-rss-feed": "^1.1.1",
     "husky": "^3.0.0",
+    "react-audio-player": "^0.11.1",
     "react-headroom": "^2.2.8",
+    "react-markdown": "^4.1.0",
+    "react-player": "^1.11.1",
+    "react-soundplayer": "^1.0.4",
+    "styled-components": "^4.3.2",
     "theme-ui": "^0.2.2",
     "typescript": "^3.5.3"
   },
