--- a/theme/package.json
+++ b/theme/package.json
@@ -27,11 +27,14 @@
     "@mdx-js/react": "^1.0.21",
     "@theme-ui/presets": "^0.2.10",
     "audiocard": "^1.0.0",
+    "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-theme-ui": "^0.2.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-anchor": "^0.5.1",
     "gatsby-source-rss-feed": "^1.1.1",
     "husky": "^3.0.0",
+    "netlify-cms-app": "^2.9.6",
+    "netlify-cms-backend-fs": "^0.4.4",
     "react-audio-player": "^0.11.1",
     "react-headroom": "^2.2.8",
     "react-markdown": "^4.1.0",
