--- a/theme/package.json
+++ b/theme/package.json
@@ -31,7 +31,9 @@
     "gatsby-plugin-theme-ui": "^0.2.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-anchor": "^0.5.1",
+    "gatsby-source-filesystem": "^2.1.5",
     "gatsby-source-rss-feed": "^1.1.1",
+    "gatsby-transformer-remark": "^2.6.6",
     "husky": "^3.0.0",
     "netlify-cms-app": "^2.9.6",
     "netlify-cms-backend-fs": "^0.4.4",
