--- a/theme/package.json
+++ b/theme/package.json
@@ -26,7 +26,10 @@
     "@emotion/core": "^10.0.14",
     "@mdx-js/react": "^1.0.21",
     "@theme-ui/presets": "^0.2.10",
+    "@types/styled-components": "^4.1.18",
     "audiocard": "^1.0.0",
+    "emotion-server": "^10.0.14",
+    "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-theme-ui": "^0.2.2",
     "gatsby-plugin-typescript": "^2.1.2",
