--- a/theme/package.json
+++ b/theme/package.json
@@ -28,6 +28,7 @@
     "@theme-ui/presets": "^0.2.10",
     "audiocard": "^1.0.0",
     "emotion-server": "^10.0.14",
+    "fs": "^0.0.1-security",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-theme-ui": "^0.2.2",
@@ -46,7 +47,8 @@
     "react-soundplayer": "^1.0.4",
     "styled-components": "^4.3.2",
     "theme-ui": "^0.2.2",
-    "typescript": "^3.5.3"
+    "typescript": "^3.5.3",
+    "yaml": "^1.6.0"
   },
   "keywords": [
     "gatsby",
