--- a/demo/static/config.yml
+++ b/demo/static/config.yml
@@ -2,14 +2,14 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: cms/img
+media_folder: src/cms/img
 public_folder: /img
 
 collections:
   - name: 'pages'
     label: 'Pages'
     files:
-      - file: 'cms/about.md'
+      - file: 'src/cms/about.md'
         label: 'Index'
         name: 'index'
         fields:
