--- a/theme/package.json
+++ b/theme/package.json
@@ -20,31 +20,26 @@
   "devDependencies": {
     "gatsby": "^2.13.1",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "netlify-cms-backend-fs": "^0.4.4"
   },
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@mdx-js/react": "^1.0.21",
     "@theme-ui/presets": "^0.2.10",
     "audiocard": "^1.0.0",
-    "emotion-server": "^10.0.14",
-    "fs": "^0.0.1-security",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-netlify-cms": "^4.1.6",
+    "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-theme-ui": "^0.2.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-anchor": "^0.5.1",
     "gatsby-source-filesystem": "^2.1.5",
-    "gatsby-source-rss-feed": "^1.1.1",
     "gatsby-transformer-remark": "^2.6.6",
     "husky": "^3.0.0",
     "netlify-cms-app": "^2.9.6",
-    "netlify-cms-backend-fs": "^0.4.4",
-    "react-audio-player": "^0.11.1",
     "react-headroom": "^2.2.8",
     "react-markdown": "^4.1.0",
-    "react-player": "^1.11.1",
-    "react-soundplayer": "^1.0.4",
     "styled-components": "^4.3.2",
     "theme-ui": "^0.2.2",
     "typescript": "^3.5.3",
