--- a/theme/package.json
+++ b/theme/package.json
@@ -19,14 +19,15 @@
   },
   "devDependencies": {
     "gatsby": "^2.13.1",
+    "netlify-cms-backend-fs": "^0.4.4",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "netlify-cms-backend-fs": "^0.4.4"
+    "react-dom": "^16.8.6"
   },
   "dependencies": {
     "@emotion/core": "^10.0.14",
     "@mdx-js/react": "^1.0.21",
     "@theme-ui/presets": "^0.2.10",
+    "@types/styled-components": "^4.1.18",
     "audiocard": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-netlify-cms": "^4.1.6",
@@ -40,6 +41,7 @@
     "netlify-cms-app": "^2.9.6",
     "react-headroom": "^2.2.8",
     "react-markdown": "^4.1.0",
+    "rebass": "^3.1.2",
     "styled-components": "^4.3.2",
     "theme-ui": "^0.2.2",
     "typescript": "^3.5.3",
