--- a/theme/package.json
+++ b/theme/package.json
@@ -30,6 +30,7 @@
     "@types/styled-components": "^4.1.18",
     "audiocard": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.2",
+    "gatsby-plugin-google-fonts": "^1.0.1",
     "gatsby-plugin-netlify-cms": "^4.1.6",
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-theme-ui": "^0.2.2",
