--- a/theme/static/admin/config.yml
+++ b/theme/static/admin/config.yml
@@ -2,7 +2,7 @@ backend:
   name: git-gateway
   branch: master
 
-media_folder: src/cms/img
+media_folder: static/img
 public_folder: /img
 
 collections:
@@ -19,80 +19,67 @@ collections:
               widget: 'hidden',
               default: 'index-page',
             }
-          - { label: Title, name: title, widget: string }
-          - { label: Image, name: image, widget: image }
-          - { label: Heading, name: heading, widget: string }
-          - { label: Subheading, name: subheading, widget: string }
           - {
-              label: Mainpitch,
-              name: mainpitch,
-              widget: object,
-              fields:
-                [
-                  { label: Title, name: title, widget: string },
-                  { label: Description, name: description, widget: text },
-                ],
-            }
-          - { label: Description, name: description, widget: string }
-          - {
-              label: Intro,
-              name: intro,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                  {
-                    label: Blurbs,
-                    name: blurbs,
-                    widget: list,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Text, name: text, widget: text },
-                      ],
-                  },
-                ],
+              label: Heading,
+              name: heading,
+              hint: 'Heading for the Banner',
+              widget: string,
+              required: false,
             }
           - {
-              label: Main,
-              name: main,
-              widget: object,
-              fields:
-                [
-                  { label: Heading, name: heading, widget: string },
-                  { label: Description, name: description, widget: text },
-                  {
-                    label: Image1,
-                    name: image1,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image2,
-                    name: image2,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                  {
-                    label: Image3,
-                    name: image3,
-                    widget: object,
-                    fields:
-                      [
-                        { label: Image, name: image, widget: image },
-                        { label: Alt, name: alt, widget: string },
-                      ],
-                  },
-                ],
+            label: Subheading,
+            name: subheading,
+            hint: 'Subheading for the Banner and Footer',
+            widget: string,
+            required: false,
+          }
+          - {
+              label: Logo,
+              name: logo,
+              widget: image,
+              hint: 'Logo to replace the one from Anchor',
+              required: false,
+            }
+          - {
+              label: Cover,
+              name: cover,
+              widget: image,
+              hint: 'Image to render in the Banner',
+              required: false,
+            }
+          - {
+              label: Podcast Links,
+              name: podcastLinks,
+              hint: 'Set of links that will appear in the Banner from different services',
+              widget: list,
+              field:
+                {
+                  label: Url,
+                  name: url,
+                  widget: string,
+                  pattern:
+                    [
+                      "^(?:http(s)?:\/\/)?[\\w.-]+(?:\\.[\\w\\.-]+)+[\\w\\-\\._~:/?#[\\]@!\\$&'\\(\\)\\*\\+,;=.]+$",
+                      'Url must be valid',
+                    ],
+                },
+            }
+          - {
+              label: Social Links,
+              name: socialLinks,
+              widget: list,
+              required: false,
+              field:
+                {
+                  label: Url,
+                  name: url,
+                  widget: string,
+                  pattern:
+                    [
+                      "^(?:http(s)?:\/\/)?[\\w.-]+(?:\\.[\\w\\.-]+)+[\\w\\-\\._~:/?#[\\]@!\\$&'\\(\\)\\*\\+,;=.]+$",
+                      'Url must be valid',
+                    ],
+                },
             }
 
       - file: 'src/cms/about.md'
@@ -107,21 +94,3 @@ collections:
             }
           - { label: 'Title', name: 'title', widget: 'string' }
           - { label: 'Body', name: 'body', widget: 'markdown' }
-
-  - name: 'news'
-    label: 'News'
-    folder: 'src/cms/news'
-    create: true
-    slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
-    fields:
-      - {
-          label: 'Template Key',
-          name: 'templateKey',
-          widget: 'hidden',
-          default: 'blog-post',
-        }
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Description', name: 'description', widget: 'text' }
-      - { label: 'Featured Image', name: 'featuredimage', widget: image }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
