--- a/theme/package.json
+++ b/theme/package.json
@@ -27,6 +27,7 @@
     "@emotion/core": "^10.0.14",
     "@mdx-js/react": "^1.0.21",
     "@theme-ui/presets": "^0.2.10",
+    "@types/rebass": "^3.0.4",
     "@types/styled-components": "^4.1.18",
     "audiocard": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.2",
