--- a/theme/static/admin/config.yml
+++ b/theme/static/admin/config.yml
@@ -27,12 +27,12 @@ collections:
               required: false,
             }
           - {
-            label: Subheading,
-            name: subheading,
-            hint: 'Subheading for the Banner and Footer',
-            widget: string,
-            required: false,
-          }
+              label: Subheading,
+              name: subheading,
+              hint: 'Subheading for the Banner and Footer',
+              widget: string,
+              required: false,
+            }
           - {
               label: Logo,
               name: logo,
@@ -94,3 +94,9 @@ collections:
             }
           - { label: 'Title', name: 'title', widget: 'string' }
           - { label: 'Body', name: 'body', widget: 'markdown' }
+          - {
+              label: 'Authors',
+              name: 'authors',
+              widget: 'list',
+              fields: [{ label: 'Name', name: 'name', widget: 'string' }],
+            }
