--- a/theme/static/admin/config.yml
+++ b/theme/static/admin/config.yml
@@ -101,6 +101,7 @@ collections:
               fields:
                 [
                   { label: 'Name', name: 'name', widget: string },
+                  { label: 'Description', name: 'description', widget: string },
                   { label: 'Picture', name: 'picture', widget: image },
                 ],
             }
