--- a/theme/package.json
+++ b/theme/package.json
@@ -38,6 +38,7 @@
     "gatsby-source-filesystem": "^2.1.5",
     "gatsby-transformer-remark": "^2.6.6",
     "husky": "^3.0.0",
+    "moment": "^2.24.0",
     "netlify-cms-app": "^2.9.6",
     "react-headroom": "^2.2.8",
     "react-markdown": "^4.1.0",
