--- a/theme/package.json
+++ b/theme/package.json
@@ -31,7 +31,9 @@
     "audiocard": "^1.0.0",
     "gatsby-plugin-emotion": "^4.1.2",
     "gatsby-plugin-google-fonts": "^1.0.1",
+    "gatsby-plugin-manifest": "^2.2.4",
     "gatsby-plugin-netlify-cms": "^4.1.6",
+    "gatsby-plugin-offline": "^2.2.4",
     "gatsby-plugin-styled-components": "^3.1.2",
     "gatsby-plugin-typescript": "^2.1.2",
     "gatsby-source-anchor": "^0.5.1",
@@ -41,6 +43,7 @@
     "moment": "^2.24.0",
     "netlify-cms-app": "^2.9.6",
     "react-headroom": "^2.2.8",
+    "react-helmet": "^5.2.1",
     "react-markdown": "^4.1.0",
     "rebass": "^3.1.2",
     "styled-components": "^4.3.2",
